# points_to_analysis

./: .gitignore  Cargo.toml  READ_ME.txt  dune-project  points_to_analysis.opam
_build/: log
dune.lock/: lock.dune  ocaml-base-compiler.pkg  ocaml.pkg
lib/: GetAST.ml  Interpreter.ml  Interpreter.mli  ParseFun.ml  PrintFunName.ml  Printer.ml  Printer.mli  dune
src/: arc_swap.rs  exp_perm.rs  main.rs
test/: arc_swap.llbc  borrow1.llbc  borrow_cf.llbc  double_free.llbc  dune  exp_perm.llbc  open_ssl.llbc  own1.llbc  own2.llbc  own_cf.llbc  prot_perm.llbc
test/rust/: Cargo.toml
test/rust/src/: arc_swap.rs  borrow1.rs  borrow_cf.rs  double_borrow.rs  double_free.rs  loop.rs  mut_brw.rs  nested_fun.rs  open_ssl.rs  own1.rs  own2.rs  own_cf.rs  prot_perm.rs
