(lang dune 3.17)

(name points_to_analysis)

(generate_opam_files true)

(source
 (github Vivien23/points_to_analysis))

(authors "Vivien GACHET")

(maintainers "Vivien GACHET")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name points_to_analysis)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
    ocaml
    yojson)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
