cargo-features = ["edition2024"]

[package]
name = "points_to_check"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = "0.10.66"

[[bin]]
name = "arc_swap"
path = "src/arc_swap.rs"

[[bin]]
name = "open_ssl"
path = "src/open_ssl.rs"

[[bin]]
name = "double_free"
path = "src/double_free.rs"

[[bin]]
name = "exp_perm"
path = "src/exp_perm.rs"

[[bin]]
name = "prot_perm"
path = "src/prot_perm.rs"

[[bin]]
name = "borrow1"
path = "src/borrow1.rs"

[[bin]]
name = "borrow_cf"
path = "src/borrow_cf.rs"

[[bin]]
name = "double_borrow"
path = "src/double_borrow.rs"

[[bin]]
name = "mut_brw"
path = "src/mut_brw.rs"

[[bin]]
name = "own1"
path = "src/own1.rs"

[[bin]]
name = "own2"
path = "src/own2.rs"

[[bin]]
name = "own_cf"
path = "src/own_cf.rs"

[[bin]]
name = "nested_fun"
path = "src/nested_fun.rs"